<resources>
    <string name="app_name">ArtistryMuse</string>
    <string name="following">Following</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="gallery">Gallery</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="title_activity_inspiration">InspirationActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_create_project">CreateProjectActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string-array name="profile_image_source_choice">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>
    <string name="profile_image_source_title">Choose an image source</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="LoginName">Login</string>
    <string name="LoginPassword">Password</string>
    <string name="LoginButton">Login</string>
    <string name="LoginSignup">Sign Up</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_logoff">Logoff</string>
    <string name="action_login">Login</string>
    <string name="sign_out_failed">Signing out has failed</string>
    <string name="users_directory_name">users</string>
    <string name="rationale_storage">This is going to read/write files from storage for photo use</string>
    <string name="project">Project</string>
    <string name="profile_file_error_message">There was a problem capturing the camera image.</string>
    <string name="profile_file_error_title">Image Error</string>
    <string name="myapp_font_family_title_material">sans-serif-medium</string>
    <string name="myapp_font_family_headline_material">sans-serif</string>
    <string name="myapp_font_family_subhead_material">sans-serif</string>
    <string name="myapp_font_family_body_1_material">sans-serif</string>
    <string name="title_activity_user_details">UserDetailsActivity</string>
    <string name="following_label_string">Following</string>
    <string name="followed_label_string">Followed</string>
    <string name="projects_label_string">Projects</string>
    <string name="default_author_text">Author</string>
    <string name="default_username_text">Username</string>
    <string name="following_off_text">follow</string>
    <string name="follow_on_text">following</string>
    <string name="rating_label_imageView">Rating</string>
    <string name="views_label_imageView">Views</string>
    <string name="favorited_label_textView">Favorited</string>
    <string name="rating_image_contentDescription">The average rating that users have given your work</string>
    <string name="views_image_contentDescription">The count of users who have viewed your work</string>
    <string name="favorited_image_contentDescription">The count of users who have favorited you</string>
    <string name="subcontent_text_author_contentDescription">The name of the author</string>
    <string name="subcontent_text_username_contentDescription">The username of the author</string>
    <string name="content_user_details_text_count_contentDescription">The number of Projects the User has created</string>
    <string name="content_user_details_followers_contentDescription">The number of Followers the User has</string>
    <string name="content_user_details_following_contentDescription">The number of other Users being Followed by this User</string>
    <string name="content_user_details_button_following_contentDescription">This button allows you the Follow and Un-follow this User</string>
    <string name="card_projects_followed_following_contentDescription">This card shows all of the social connections for this User</string>
    <string name="connections_title">Connections</string>
    <string name="zero_text">0</string>
</resources>