<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ ArtistryMuse is an application that allows artist to share projects
  ~ they have created along with the inspirations behind them for others to
  ~ discover and enjoy.
  ~ Copyright (C) 2017  David A. Todd
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/author_TextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/subcontent_text_author_contentDescription"
        android:text="@string/default_author_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/username_TextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/subcontent_text_username_contentDescription"
        android:text="@string/default_username_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>
