<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ ArtistryMuse is an application that allows artist to share projects
  ~ they have created along with the inspirations behind them for others to
  ~ discover and enjoy.
  ~ Copyright (C) 2017  David A. Todd
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Opens the Profile activity-->
    <item android:id="@+id/action_profile"
        android:title="@string/action_profile"
        app:showAsAction="never"/>

    <!--Logoff should always be in the overflow menu.  I don't want the user to hit an Action button and accidently log off.-->
    <item android:id="@+id/action_logoff"
        android:title="@string/action_logoff"
        app:showAsAction="never"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>