<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.concavenp.artistrymuse.LoginActivity"
    tools:showIn="@layout/activity_login"
    android:background="@color/colorPrimaryDark">
    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->

    <ImageView
        android:layout_width="192dp"
        android:layout_height="192dp"
        app:srcCompat="@drawable/ic_muse_logo_1_vector"
        android:layout_marginTop="46dp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:id="@+id/editText"
        android:singleLine="true"
        android:hint="@string/LoginName"
        android:background="@color/common_google_signin_btn_text_dark_default" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/editText"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:layout_marginTop="11dp"
        android:id="@+id/editText2"
        android:singleLine="true"
        android:hint="@string/LoginPassword"
        android:background="@color/common_google_signin_btn_text_dark_default" />

    <Button
        android:text="@string/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:onClick="onLogin"
        android:id="@+id/button2" />

    <Button
        android:text="@string/LoginSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:layout_marginTop="11dp"
        android:id="@+id/button3" />
</RelativeLayout>
