<?xml version="1.0" encoding="utf-8"?>


<!--
  ~ ArtistryMuse is an application that allows artist to share projects
  ~ they have created along with the inspirations behind them for others to
  ~ discover and enjoy.
  ~ Copyright (C) 2017  David A. Todd
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_margin"
    android:orientation="horizontal"
    android:weightSum="3"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/projects_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_user_details_text_count_contentDescription"
                android:paddingEnd="@dimen/half_margin"
                android:paddingStart="@dimen/half_margin"
                app:srcCompat="@drawable/ic_work_black_24dp" />

            <TextView
                android:id="@+id/project_count_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_user_details_text_count_contentDescription"
                android:gravity="center_vertical"
                android:text="@string/zero_text"/>

        </LinearLayout>

        <TextView
            android:id="@+id/project_count_label_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_user_details_text_count_contentDescription"
            android:gravity="center"
            android:text="@string/projects_label_string"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/followed_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_user_details_followers_contentDescription"
                android:paddingEnd="@dimen/half_margin"
                android:paddingStart="@dimen/half_margin"
                app:srcCompat="@drawable/ic_people_black_24dp"/>

            <TextView
                android:id="@+id/followed_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_user_details_followers_contentDescription"
                android:gravity="center_vertical"
                android:text="@string/zero_text"/>

        </LinearLayout>

        <TextView
            android:id="@+id/followed_label_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_user_details_followers_contentDescription"
            android:gravity="center"
            android:text="@string/followed_label_string"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/followers_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_user_details_following_contentDescription"
                android:paddingEnd="@dimen/half_margin"
                android:paddingStart="@dimen/half_margin"
                app:srcCompat="@drawable/ic_people_outline_black_24dp"/>

            <TextView
                android:id="@+id/following_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_user_details_following_contentDescription"
                android:gravity="center_vertical"
                android:text="@string/zero_text"/>

        </LinearLayout>

        <TextView
            android:id="@+id/following_Label_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_user_details_following_contentDescription"
            android:gravity="center"
            android:text="@string/following_label_string"/>

    </LinearLayout>

</LinearLayout>

            