<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ ArtistryMuse is an application that allows artist to share projects
  ~ they have created along with the inspirations behind them for others to
  ~ discover and enjoy.
  ~ Copyright (C) 2017  David A. Todd
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/rating_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/rating_image_contentDescription"
                android:paddingEnd="4dp"
                app:srcCompat="@drawable/ic_star_black_24dp" />

            <TextView
                android:id="@+id/rating_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/rating_image_contentDescription"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rating_image_contentDescription"
            android:gravity="center"
            android:text="@string/rating_label_imageView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/views_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/views_image_contentDescription"
                android:paddingEnd="4dp"
                app:srcCompat="@drawable/ic_remove_red_eye_black_24dp" />

            <TextView
                android:id="@+id/views_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/views_image_contentDescription"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/views_image_contentDescription"
            android:gravity="center"
            android:text="@string/views_label_imageView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/favorited_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/favorited_image_contentDescription"
                android:paddingEnd="4dp"
                app:srcCompat="@drawable/ic_thumb_up_black_24dp" />

            <TextView
                android:id="@+id/favorited_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/favorited_image_contentDescription"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/favorited_image_contentDescription"
            android:gravity="center"
            android:text="@string/favorited_label_textView" />

    </LinearLayout>

</LinearLayout>

